--- a/Blinkenlights.Basic.App/Blinkenlights.Basic.App.csproj
+++ b/Blinkenlights.Basic.App/Blinkenlights.Basic.App.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Irony.NetCore" Version="1.1.11" />
+    <PackageReference Include="Irony" Version="1.5.3" />
   </ItemGroup>
 
 </Project>
